apps/web/content/wiki/1.20/ironjetpacks/items/jetpacks.md
---
id: jetpacks
title: Jetpacks
icon: /assets/ironjetpacks/v2/items/diamond_jetpack.png
sort: 1
version: 1.0.0
---

## Overview

::callout{title="Note" icon="i-heroicons-information-circle-solid"}
Jetpacks in this mod are completely configurable. Jetpack stats and materials may differ from modpack to modpack.
::

Jetpacks make use of Forge Energy to allow the player to fly. Higher tier Jetpacks can have greater speed and energy capacity.

## Usage

Jetpacks require Forge Energy to function. They can be charged using a charging block from any mod that supports Forge Energy.

The Jetpack engine can be toggled on and off using a keybinding (default `V`). When the engine is on you can press the Space Bar to fly.

Every Jetpack has a Hover Mode, which allows for more precise movements. Enabling this mode (default keybinding `H`) will cause your Jetpack to hover in place with varying levels of descent. While hovering your Jetpack will consume power.

You can change the speed of your Jetpack using Throttle Controls. This is done using the Throttle Control keybindings (default `,` and `.`).

## Curios Integration

Jetpacks can be equipped as a Curio in the `Body` slot.

Note: If the player wears a Jetpack in both the Curio slot and the Chestplate slot, the Jetpack in the Chestplate slot will take priority.
